# research-agent-mcp

./: .gitignore  README.md
auto-research/: cursor_using_autoresearch_for_applicati.md  stock_features_next_day_direction_prediction.md
autoresearch-forecasting/: .gitignore  README.md  predict.py  predict_nn.py  prepare.py  program.md  requirements.txt  stocks.md  train.py
behavioral-economics-analyst/: SKILL.md  data-sources.md  report-template.md
cross-regime-research-analyst/: SKILL.md  archetypes.md  drills.md  elasticities.md  frameworks.md  regimes.md  report-template.md
design-thinking-practice/: SKILL.md  cursor_low_latency_order_matching_engin.md  your-thinking-profile.md
engineering-system-decomposition/: SKILL.md  resource-guide.md  study-template.md
investment-management/: SKILL.md  quantitative-models.md  rebalancing-framework.md  report-template.md
macro-research-analyst/: SKILL.md  report-template.md
market-microstructure-analyst/: SKILL.md
mcp-server/: pyproject.toml
mcp-server/.agent_pipeline_out/: signal_prompt.txt
mcp-server/upstox_optionchain_mcp/: __init__.py  __main__.py  chain_parse.py  cross_market.py  date_utils.py  feature_pipeline.py  liquidity.py  microstructure_scan.py  order_book.py  order_flow.py  pcr_maxpain.py  pyproject.toml  rule_engine.py  server.py  session_regime.py  signal_prompt.py  tier1_to_signals.py  upstox_api.py  vwap_profile.py
mcp-server/upstox_optionchain_mcp/upstox_optionchain_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
micro-research-analyst/: SKILL.md  report-template.md
(+83 files in other folders)
