[project]
name = "upstox-optionchain-mcp"
version = "0.1.0"
description = "MCP server: Upstox option chain fetch + Tier-1 feature signals for NIFTY-style indices"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
upstox-optionchain-mcp = "upstox_optionchain_mcp.server:run_stdio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
